--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${libs.jaxb.classpath}:\
+    ${libs.JAXB-ENDORSED.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
